revamped the site a little

--- a/Essentials.html
+++ b/Essentials.html
@@ -14,93 +14,126 @@
 </head>
 
 <body>
-    <h1>Essentials</h1>
-    <img src="images/logo.jpg" class="img-2" alt="logo">
+    <header>
+        <h1>Essentials</h1>
+
+    </header>
     <nav>
         <ul>
+            <input type="search" name="s" id="search" placeholder="Search for items" class="input-1">
             <li><a href="#">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Contact us</a></li>
         </ul>
+
     </nav>
-    <div class="head">
-        <input type="search" name="s" id="search" placeholder="Search for items" class="input-1">
-        <i class="fas fa-search"></i>
-    </div>
-    <div class="background-image">
-        <h1 class="slogan">Eessentials your brand for premium accessories</h1>
-    </div>
-    <h2>Watches</h2>
-    <div class="image-container">
+
+    <main>
+        <div class="background-image">
+            <h1 class="slogan">Essentials your brand for premium accessories</h1>
+        </div>
+
+
+        <div class="watch-header">
+            <h1>Watches</h1>
+        </div>
         <div class="watch-container">
-            <img src="images/watch.jpg" alt="image">
-            <p>JMD$100</p>
+            <div class="watch-1"><img src="images/watch.jpg" alt="image">
+                <h5>$400.00USD</h5>
+                <div class="stars">
+                    <h5><i class="fas fa-star"></i></h5>
+                    <h5><i class="far fa-star"></i></h5>
+                </div>
+
+            </div>
+
+
+            <div class="watch-2"><img src="images/watch2.jpg" alt="image">
+                <h5>$1000.00USD</h5>
+            </div>
+
+
+            <div class="watch-2"><img src="images/watch3.jpg" alt="image">
+                <h5>$4000.00USD</h5>
+            </div>
+
+
+            <div class="watch-2"><img src="images/watch4.jpg" alt="image">
+                <h5>$2000.00USD</h5>
+            </div>
         </div>
-        <div class="watch-container-2">
-            <img src="images/watch2.jpg" alt="image">
-            <p>JMD200$</p>
+
+
+
+
+        <div class="glasses-header">
+            <h1>Glasses</h1>
         </div>
-        <div class="watch-container-3">
-            <img src="images/watch3.jpg" alt="image">
-            <p>JMD$100</p>
+        <div class="watch-container">
+            <div class="watch-1"><img src="images/glasses-2.jpg" alt="image">
+                <h5>$40.00USD</h5>
+                <h5></h5>
+            </div>
+
+            <div class="watch-2"><img src="images/glass.jpg" alt="image">
+                <h5>$10.00USD</h5>
+            </div>
+
+
+            <div class="watch-2"><img src="images/shades-2.jpg" alt="image">
+                <h5>$60.00USD</h5>
+            </div>
+
+
+            <div class="watch-2"><img src="images/shades.jpg" alt="image">
+                <h5>$50.00USD</h5>
+            </div>
         </div>
-        <div class="watch-container-4">
-            <img src="images/watch4.jpg" alt="image">
-            <p>JMD200$</p>
-        </div>
-    </div>
-    <h2>Glasses</h2>
-    <div class="image-container">
-        <div class="glasses-container">
-            <img src="images/glass.jpg" alt="image">
-            <p>JMD$100</p>
-        </div>
-        <div class="glasses-two">
-            <img src="images/glasses-2.jpg" alt="image">
-            <p>JMD$200</p>
-        </div>
-        <div class="glasses-three">
-            <img src="images/shades.jpg" alt="image">
-            <p>JMD$100</p>
-        </div>
-        <div class="glasses-four">
-            <img src="images/shades-2.jpg" alt="image">
-            <p>JMD$200</p>
-        </div>
-    </div>
-    <div class="section-2">
-        <h3>Telephone:(876)440-5246</h3>
-        <div class="email">
-            <a href="mailto:shawnwatt68@gmail.com">
-                <h3>Email: Essentials@gmail.com</h3>
-            </a>
-        </div>
-        <div class="social-media">
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter-square"></i></a>
-        </div>
-        <div class="contact-container">
-            <h2 class="h2-2"> Contact us</h2>
-            <input type="text" name="c" placeholder="Your name:">
-            <input type="text" name="c" placeholder="Your email:">
-            <textarea>Your message:</textarea>
-            <button>Send</button>
-        </div>
-    </div>
-    <div class="section-3">
-        <h1>Why choose us? </h1>
-        <ul class="ul-sec-3">
-            <li class="li-sec-2">Premium look when wearing</li>
-            <li class="li-sec-2">Affordable</li>
-            <li class="li-sec-2">Refundable</li>
-            <li class="li-sec-2">Freeshipping WorldWide</li>
-    </div>
-    <h1>Where to find us?</h1>
-    <p>3 Rochdale Avenue Kingston 3</p>
-    <div class="copyright">
-        &copy;Copyright 2019-Designed by Roshoun Watt
-    </div>
+
+
+
+
+
+        <section>
+            <div class="contact-info">
+                <h3>Telephone:(876)440-5246</h3>
+                <div class=" email ">
+                    <a href="mailto:shawnwatt68@gmail.com ">
+                        <h3>Email: Essentials@gmail.com</h3>
+                    </a>
+                </div>
+                <div class="social-media ">
+                    <a href="# "><i class="fab fa-facebook-square "></i></a>
+                    <a href="# "><i class="fab fa-instagram "></i></a>
+                    <a href="# "><i class="fab fa-twitter-square "></i></a>
+                </div>
+                <div class="contact-container ">
+                    <h2 class="h2-2 "> Contact us</h2>
+                    <input type="text " name="c " placeholder="Your name: ">
+                    <input type="text " name="c " placeholder="Your email: ">
+                    <textarea>Your message:</textarea>
+                    <button>Send</button>
+                </div>
+            </div>
+
+
+            <article>
+                <h1>Why choose us? </h1>
+                <ul class="ul-sec-3 ">
+                    <li class="li-sec-2 ">Premium look when wearing</li>
+                    <li class="li-sec-2 ">Affordable</li>
+                    <li class="li-sec-2 ">Refundable</li>
+                    <li class="li-sec-2 ">Freeshipping WorldWide</li>
+                    </div>
+                    <h1>Where to find us?</h1>
+                    <p>3 Rochdale Avenue Kingston 3</p>
+            </article>
+
+            <footer> &copy;Copyright 2019-Designed by Roshoun Watt</footer>
+        </section>
+
+    </main>
+
 
 
 </body>
